Closed
Bug 377898
Opened 18 years ago
Closed 18 years ago
ASSERTION: unknown text type: '(aParams->mFlags & TEXT_IS_ASCII || aParams->mFlags & TEXT_IS_8BIT)', file gfxWindowsFonts.cpp, line 600
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smontagu, Assigned: smontagu)
References
Details
Attachments
(1 file, 2 obsolete files)
|
1.07 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
This assertion fires repeatedly on many sites with the new textframe turned on.
| Assignee | ||
Comment 1•18 years ago
|
||
Attachment #261967 -
Flags: review?(roc)
This patch isn't right, IS_ASCII and IS_8BIT aren't mutually exclusive. gfxWindowsFontGroup::MakeTextRun(PRUint8*) should just set TEXT_IS_8BIT in the flags, as Mac and Pango do.
| Assignee | ||
Comment 3•18 years ago
|
||
Like so?
Assignee: nobody → smontagu
Attachment #261967 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #262070 -
Flags: review?(roc)
Attachment #261967 -
Flags: review?(roc)
Looks like the same patch.
| Assignee | ||
Comment 5•18 years ago
|
||
<sigh>
Attachment #262070 -
Attachment is obsolete: true
Attachment #262077 -
Flags: review?(roc)
Attachment #262070 -
Flags: review?(roc)
Attachment #262077 -
Flags: superreview+
Attachment #262077 -
Flags: review?(roc)
Attachment #262077 -
Flags: review+
| Assignee | ||
Comment 6•18 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
| Assignee | ||
Comment 7•18 years ago
|
||
The assertion doesn't exist any more, so there isn't really anything to test here.
Flags: in-testsuite? → in-testsuite-
You need to log in
before you can comment on or make changes to this bug.
Description
•