Remove one incorrect assertion and temporarily comment out one that fires too often. Bug 377898, bug 377902, r+sr=roc